# Space-Shooter-Game-Engine

./: .gitignore  CMakeLists.txt  README.md  config.ini
src/: Background.cpp  Background.h  BossEnemy.cpp  BossEnemy.h  Bullet.cpp  Bullet.h  Config.cpp  Config.h  Enemy.cpp  Enemy.h  EnemyTypes.cpp  EnemyTypes.h  Game.cpp  Game.h  GameState.h  HighScoreManager.cpp  HighScoreManager.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  SoundManager.cpp  SoundManager.h  main.cpp
